--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
+    "db:deploy": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:migrate:dev": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:seed": "tsx prisma/seed.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:status": "prisma migrate status",
+    "db:verify": "tsx scripts/verify-database.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
