--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,10 @@
   "regions": ["iad1"],
   "env": {
     "PRISMA_GENERATE_DATAPROXY": "true"
+  },
+  "functions": {
+    "src/app/api/**/*.ts": {
+      "maxDuration": 30
+    }
   }
 }
