--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   }
