--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "PRISMA_GENERATE_DATAPROXY": "true"
-  },
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
     "src/app/api/**/*.ts": {
       "maxDuration": 30
